--- a/ng-architecture-lesson/src/user/components/login/login.component.html
+++ b/ng-architecture-lesson/src/user/components/login/login.component.html
@@ -3,7 +3,7 @@
         <label>Name:</label>
         <input type="text" name="name" />
     </div>
-    <div class="form-group">
+    <div class="form-group" jb-background>
         <button type="submit">
             Login
         </button>
