finished the testing lesson

--- a/angular-router-tutorial/src/app/app.component.html
+++ b/angular-router-tutorial/src/app/app.component.html
@@ -12,6 +12,11 @@
         Aboutpage
       </a>
     </li>
+    <li routerLinkActive="active">
+      <a routerLink="/tasks">
+        Todo Tasks
+      </a>
+    </li>
   </ul>
 </nav>
 
